# live-profile-monitor

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project  live-profile-monitor.cabal  live-profile-monitor.sublime-project  stack.yaml  tests.sh
app/: Main.hs
cbits/: pipe.c  profiler.c  profiler_client.c
live-profile-client/: CHANGELOG.md  README.md  live-profile-client.cabal
live-profile-client/src/Profile/Live/: Client.hs
live-profile-leech/: CHANGELOG.md  README.md  live-profile-leech.cabal
live-profile-leech/cbits/: leech.c
live-profile-leech/src/Profile/Live/: Leech.hs
live-profile-protocol/: CHANGELOG.md  README.md  live-profile-protocol.cabal
live-profile-protocol/src/Profile/Live/: Termination.hs
live-profile-protocol/src/Profile/Live/Protocol/: Collector.hs  Message.hs  Splitter.hs  State.hs  Utils.hs
live-profile-protocol/src/Profile/Live/Protocol/State/: Capability.hs  Task.hs  Thread.hs
src/Profile/: Live.hs  pipe.c
src/Profile/Live/: Hidden.hs  Options.hs  Parser.hs  Pipe.hs  Server.hs  State.hs
src/Profile/Live/Server/: Collector.hs  Message.hs  Splitter.hs  State.hs
src/Profile/Live/Server/State/: Capability.hs  Task.hs  Thread.hs
test/: Main.hs
test/Test/: Client.hs  Put.hs
test/test-leech/: Main.hs
