name:                live-profile-monitor
version:             0.1.0.0
synopsis:            Utilities to stream eventlog to remote profiler
description:         Please see README.md
homepage:            https://github.com/ncrashed/live-profile-monitor#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Development, GHC, Debug, Profiling, Trace
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Profile.Live
  build-depends:       
      base >= 4.7 && < 5
    , ghc-events >= 0.5
    , socket >= 0.6
    , filepath >= 1.4
    , bytestring >= 0.10
    , directory >= 1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ncrashed/live-profile-monitor

test-suite test-monitor
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -eventlog -rtsopts
  build-depends: 
      base
    , live-profile-monitor