name:                live-profile-monitor
version:             0.1.0.0
synopsis:            Utilities to stream eventlog to remote profiler
description:         Please see README.md
homepage:            https://github.com/ncrashed/live-profile-monitor#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Development, GHC, Debug, Profiling, Trace
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Profile.Live
    Profile.Live.Options 
    Profile.Live.Parser 
    Profile.Live.Pipe
    Profile.Live.Server
    Profile.Live.Server.Collector
    Profile.Live.Server.Message
    Profile.Live.Server.Splitter
    Profile.Live.Server.State
    Profile.Live.Server.State.Thread
    Profile.Live.State
    Profile.Live.Termination
  c-sources:
    cbits/pipe.c 

  build-depends:       
      base >= 4.7 && < 5
    , binary >= 0.7.6
    , binary-serialise-cbor >= 0.1.1.0
    , bytestring >= 0.10
    , containers >= 0.5.6
    , deepseq >= 1.4
    , directory >= 1.2
    , fast-logger >= 2.4.6
    , filepath >= 1.4
    , ghc-events >= 0.5
    , ghc-prim >= 0.5
    , mtl >= 2.2 
    , socket >= 0.6
    , stm >= 2.4
    , stm-chans >= 3.0
    , storable-endian >= 0.2.5
    , time >= 1.6
    , transformers >= 0.4.2
    , unordered-containers >= 0.2.7
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
  extra-libraries:
    pthread

executable hs-live-profile
  hs-source-dirs: app 
  main-is: Main.hs
  ghc-options: -threaded -g
  -- other-modules:
  build-depends:       
      base >= 4.7 && < 5
    , live-profile-monitor
    , fast-logger >= 2.4.6
    , process >= 1.4

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ncrashed/live-profile-monitor

test-suite test-leech
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/test-leech
  main-is:          Main.hs
  ghc-options:      -eventlog -rtsopts -threaded
  default-language: Haskell2010
  build-depends: 
      base
    , live-profile-leech

test-suite test-monitor
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Test.Client
    Test.Put
  ghc-options:      -eventlog -rtsopts -threaded
  default-language: Haskell2010
  build-depends: 
      base
    , live-profile-monitor
    , socket >= 0.6
    , bytestring >= 0.10
    , directory >= 1.2
    , fast-logger >= 2.4.6
    , ghc-events >= 0.5
    , stm >= 2.4
    , binary >= 0.7.6
    , deepseq >= 1.4
    , containers >= 0.5.6
    , process >= 1.4