name:                live-profile-client
version:             0.2.0.0
synopsis:            Library for live profiling that connects to remote application.
description:         Please see README.md
homepage:            https://github.com/ncrashed/live-profile-monitor#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Development, GHC, Debug, Profiling, Trace
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Profile.Live.Client
  build-depends:       
      base >= 4.7 && < 5
    , deepseq >= 1.4
    , fast-logger >= 2.4
    , ghc-events >= 0.5
    , live-profile-protocol == 0.1.*
    , mtl >= 2.2
    , socket >= 0.6
    , time >= 1.6
    
  default-language:    Haskell2010
  default-extensions:
    DeriveGeneric
    OverloadedStrings 
    RecordWildCards

source-repository head
  type:     git
  location: https://github.com/ncrashed/live-profile-monitor