name:                live-profile-protocol
version:             0.1.0.0
synopsis:            Shared code between client and server for live profiling.
description:         Please see README.md
homepage:            https://github.com/ncrashed/live-profile-monitor#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Development, GHC, Debug, Profiling, Trace
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Profile.Live.Protocol.State
    Profile.Live.Protocol.State.Capability
    Profile.Live.Protocol.State.Task
    Profile.Live.Protocol.State.Thread
    Profile.Live.Protocol.Collector
    Profile.Live.Protocol.Message
    Profile.Live.Protocol.Splitter
  build-depends:       
      base >= 4.7 && < 5
    , binary >= 0.7.6.1
    , binary-serialise-cbor >= 0.1.1.0
    , bytestring >= 0.10.8
    , containers >= 0.5.7
    , deepseq >= 1.4
    , fast-logger >= 2.4
    , ghc-events >= 0.5
    , mtl >= 2.2
    , time >= 1.6
    , unordered-containers >= 0.2.7
    
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/ncrashed/live-profile-monitor